--- a/index.html
+++ b/index.html
@@ -8,26 +8,38 @@
   
   <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="container">
+    <article class="main-image">
+      <img src="./images/image-equilibrium.jpg">
+      <div>
+        <img src="./images/icon-view.svg">
+      </div>
+    </article>
+    
+    <article>
+      <h2>Equilibrium #3429</h2>
+      <p>  Our Equilibrium collection promotes balance and calm.</p>
 
-  Equilibrium #3429
+      <ul>
+        <li><img src="./images/icon-ethereum.svg"> 0.041 ETH</li>
+        <li><img src="./images/icon-clock.svg"> 3 days left</li>
+      </ul>
+    </article>
 
-  Our Equilibrium collection promotes balance and calm.
+    <article class="avatar">
+      <img src="./images/image-avatar.png">
+      <p>Creation of <span>Jules Wyvern</span></p>
+    </article>
+    
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+    </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/KhanZii">Peter Madrigal</a>.
   </div>
 </body>
 </html>
